<resources>
    <string name="app_name">Uhyo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_othello">Othello</string>
    <string name="text_soloPlay_button">ひとり</string>
    <string name="text_duoPlay_button">ふたり</string>
    <string name="text_onlinePlay_button">オンライン対戦</string>
    <string name="text_rule_button">オセロのルール</string>
    <string name="title_text_soloPlaySetting">ひとり対局</string>
    <string name="text_computer_level">コンピュータのレベル</string>
    <string name="text_setComputer_level_1">1</string>
    <string name="text_setComputer_level_2">2</string>
    <string name="text_setComputer_level_3">3</string>
    <string name="text_setComputer_level_4">4</string>
    <string name="text_selectYourTurn">あなたの手番</string>
    <string name="button_text_play">はじめる</string>
</resources>
