<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:navGraph="@navigation/nav_graph">

    <ImageView
        android:id="@+id/MainMenu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/othello_logo"
        app:layout_constraintBottom_toTopOf="@+id/button_MainMenu_onlinePlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_MainMenu_soloPlay"
        android:layout_width="138dp"
        android:layout_height="92dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="12dp"
        android:background="@color/background_white"
        android:text="@string/text_soloPlay_button"
        app:layout_constraintBottom_toTopOf="@+id/button_MainMenu_onlinePlay"
        app:layout_constraintEnd_toStartOf="@+id/button_MainMenu_duoPlay"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_MainMenu_duoPlay"
        android:layout_width="138dp"
        android:layout_height="92dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="12dp"
        android:background="@color/background_white"
        android:text="@string/text_duoPlay_button"
        app:layout_constraintBottom_toTopOf="@+id/button_MainMenu_onlinePlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_MainMenu_soloPlay" />

    <Button
        android:id="@+id/button_MainMenu_onlinePlay"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="97dp"
        android:background="@color/background_white"
        android:text="@string/text_onlinePlay_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_MainMenu_duoPlay"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/button_MainMenu_soloPlay" />

    <Button
        android:id="@+id/button_rule_dialog"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rule_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_MainMenu_onlinePlay"
        app:layout_constraintTop_toBottomOf="@+id/button_MainMenu_onlinePlay"
        app:layout_constraintVertical_bias="0.21" />


</androidx.constraintlayout.widget.ConstraintLayout>